<resources>
    <string name="app_name">Osiris NFT</string>

    <string name="existing_wallet_yoann">0x431AB840fA224702d4015AF86Ee4365B99cE235B</string>
    <string name="existing_wallet_yanis">0xDBF98602fe12f8d87921eDBFb87D3bD7B58AF758</string>

    <string name="text">texte</string>
    <string name="image">image</string>
    <string name="number">0</string>

    <string name="home">Accueil</string>
    <string name="add_pub">Publier</string>
    <string name="fav">Favoris</string>
    <string name="profile">Profil</string>

    <string name="welcome">Bienvenue sur Osiris NFT</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="wallet">Wallet</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>

    <string name="input_comment">Commenter</string>
    <string name="add_image">Choisir une image</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="category">Catégorie</string>
    <string name="generate_nft">Générer un NFT</string>
    <string name="publish">Publier</string>
    <string name="buy">Acheter</string>

    <string name="my_fav">Mes favoris</string>

    <string name="my_pub">Mes publications</string>
    <string name="my_nft">Mes NFTs</string>

    <string name="no_pub">Aucune publication</string>

    <string-array name="categories">
        <item>Photographie</item>
        <item>Pixel Art</item>
        <item>Dessin</item>
    </string-array>

</resources>