<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/homeNav"
     android:icon="@drawable/ic_home"
     android:title="@string/home"
     app:showAsAction="always"
     tools:ignore="AlwaysShowAction" />

 <item
     android:id="@+id/pubNav"
     android:icon="@drawable/ic_add"
     android:title="@string/add_pub"
     app:showAsAction="always" />

 <item
     android:id="@+id/favNav"
     android:icon="@drawable/ic_heart"
     android:title="@string/fav"
     app:showAsAction="always"
     />

 <item
     android:id="@+id/profileNav"
     android:icon="@drawable/ic_person"
     android:title="@string/profile"
     app:showAsAction="always" />
</menu>